--- a/assignment3.html
+++ b/assignment3.html
@@ -48,18 +48,47 @@
 			<span>Coords: </span>
 			<span id="coordsLabel"></span>
 		</div>
-		<div>
-			<span>Polygon: </span>
-			<select id="polygonMenu">
-				<option value="cube">poly</option>
-				<option value="sphere">line</option>
-				<option value="cone">line</option>
-				<option value="cylinder">line</option>
-			</select>
-		</div>
-		<canvas style="border:1px solid black; cursor:default;" id="gl-canvas" width="512" height="512">
+		
+		<canvas style="border:1px solid black; cursor:default; float:left;" id="gl-canvas" width="512" height="512">
 		Oops ... your browser doesn't support the HTML5 canvas element
 		</canvas>
+		
+		<div style="border:1px solid black; float:left; padding:1em;">
+			<div>
+				<span>Polygon: </span>
+				<select id="polygonMenu">
+					<option value="cube">cube</option>
+					<option value="sphere">sphere</option>
+					<option value="cone">cone</option>
+					<option value="cylinder">cylinder</option>
+				</select>
+			</div>
+			<hr>
+			<span>Translation: </span>
+			<div> <span>x:</span> <input id="xTrans" type="range" data-initial="0" min="-100" max="100"> <span id="xTransLabel">0</span> </div>
+			<div> <span>y:</span> <input id="yTrans" type="range" data-initial="0" min="-100" max="100"> <span id="yTransLabel">0</span></div>
+			<div> <span>z:</span> <input id="zTrans" type="range" data-initial="0" min="-100" max="100"> <span id="zTransLabel">0</span></div>
+			<hr>
+			<span>Rotation: </span>
+			<div> <span>x:</span> <input id="xRot" type="range" data-initial="0" min="0" max="360" value="0"> <span id="xRotLabel">0</span> </div>
+			<div> <span>y:</span> <input id="yRot" type="range" data-initial="0" min="0" max="360" value="0"> <span id="yRotLabel">0</span></div>
+			<div> <span>z:</span> <input id="zRot" type="range" data-initial="0" min="0" max="360" value="0"> <span id="zRotLabel">0</span></div>
+			<hr>
+			<span>Scale: </span>
+			<div> <span>x:</span> <input id="xScale" type="range" data-initial="1" min="0" max="10" value="1"> <span id="xScaleLabel">1
+			</span> </div>
+			<div> <span>y:</span> <input id="yScale" type="range" data-initial="1" min="0" max="10" value="1"> <span id="yScaleLabel">1</span></div>
+			<div> <span>z:</span> <input id="zScale" type="range" data-initial="1" min="0" max="10" value="1"> <span id="zScaleLabel">1</span></div>
+			<hr>
+			<div style="text-align: center">
+				<button id="placePolygonBtn">Place</button>
+				<button id="removePolygonBtn">Delete</button>
+			</div>
+			<hr>
+			<div style="text-align: center">
+				<span>Selected: </span><span id="selectedPolygon">None</span>
+			</div>
+		</div>
 		
 		
 	</body>
